--- a/platform-ui/views/includes/header.ejs
+++ b/platform-ui/views/includes/header.ejs
@@ -116,7 +116,7 @@
                         </div>
                         <div class="row">
                             <span class="col-md-3"></span>
-                            <a href="/user/google/login/request" class="btn col-md-6 btn-social btn-google-plus">
+                            <a href="<%=contextPath%>/user/google/login/request" class="btn col-md-6 btn-social btn-google-plus">
                                 <i class="fa fa-google-plus"></i>Sign in with Google
                             </a>
                             <span class="col-md-3"></span>
@@ -160,7 +160,7 @@
                     <p style="font-size: 18px">Welcome to ekStep. Sign in is simplified. Just use your Google+ id.</p><br/>
                     <div class="row">
                         <span class="col-md-3"></span>
-                        <a href="/user/google/login/request" class="btn col-md-6 btn-social btn-google-plus btn-lg">
+                        <a href="<%=contextPath%>/user/google/login/request" class="btn col-md-6 btn-social btn-google-plus btn-lg">
                             <i class="fa fa-google-plus"></i>Sign up with Google
                         </a>
                         <span class="col-md-3"></span>
