--- a/platform-ui/views/includes/player-scripts.ejs
+++ b/platform-ui/views/includes/player-scripts.ejs
@@ -8,6 +8,7 @@
 <script src="<%=contextPath%>/js/thirdparty/sunburst.js"></script>
 <script src="<%=contextPath%>/js/thirdparty/angular-sanitize.min.js"></script>
 <script src="<%=contextPath%>/js/thirdparty/angular-readable-time.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-file-model.js"></script>
 <script src="<%=contextPath%>/js/thirdparty/truncate.js"></script>
 <script src="<%=contextPath%>/js/app/custom.js" type="text/javascript"></script>
 <script src="<%=contextPath%>/js/app/dndTree.js" type="text/javascript"></script>
