--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -93,6 +93,7 @@
 
 <div ng-include="'save_confirmation_template.html'"></div>
 <div ng-include="'comments_template.html'"></div>
+<div ng-include="'audit_log_template.html'"></div>
 
 <script type="text/javascript">
 	$('.mid-container-full').on("scroll", function(e) {
