handle worksheet loading.

--- a/quiz-app/www/templates/content-list.html
+++ b/quiz-app/www/templates/content-list.html
@@ -45,7 +45,7 @@
 </ion-pane>
 <div style="margin:auto; position:absolute;width:100%;height:100%;" ng-if="load.status">
     <div style="margin: auto; width: 100%; position: fixed; text-align: center; top: 50%; font-weight: bold;">
-        <ion-spinner icon="spiral"></ion-spinner>
+        <ion-spinner icon="bubbles"></ion-spinner>
         <div style="margin: auto; width: 100%; position: fixed; text-align: center; font-weight: bold;">
             Loading worksheets...
         </div>
