content list load changes

--- a/quiz-app/www/templates/content-list.html
+++ b/quiz-app/www/templates/content-list.html
@@ -1,4 +1,4 @@
-<ion-pane ng-if="!load.status">
+<ion-pane ng-show="!load.status">
     <ion-content>
         <div id="bookshelf_slider" class="bookshelf_slider">
 
