add stories tab in list page

--- a/quiz-app/www/templates/content-list.html
+++ b/quiz-app/www/templates/content-list.html
@@ -12,6 +12,14 @@
 
                     <div class="slide_animate">
                         <div class="products_box" id="products_box_1">
+                            <div class="product" data-type="" title="{{story.name}}" ng-repeat="story in stories" ng-click="playWorksheet(story);">
+                                <img ng-src="{{story.appIcon}}" alt="" width="100" height="105" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slide_animate">
+                        <div class="products_box" id="products_box_2">
                             <div class="product" data-type="" title="{{game.name}}" ng-repeat="game in games" ng-click="playWorksheet(game);">
                                 <img ng-src="{{game.appIcon}}" alt="" width="100" height="105" />
                             </div>
@@ -19,7 +27,7 @@
                     </div>
 
                     <div class="slide_animate">
-                        <div class="products_box" id="products_box_2">
+                        <div class="products_box" id="products_box_3">
                             <div class="product" data-type="" title="{{scr.name}}" ng-repeat="scr in screeners" ng-click="playWorksheet(scr);">
                                 <img ng-src="{{scr.appIcon}}" alt="" width="100" height="105" />
                             </div>
@@ -33,8 +41,9 @@
                 <div class='buttons_container'>
                     <div id="arrow_box"><div id="arrow_menu"></div></div>
                     <div class="button_items">
-                        <div id="btn1" class="button_bar"><a href="#">Worksheets</a></div>
-                        <div id="btn2" class="button_bar"><a href="#">Screeners</a></div>
+                        <div id="btn1" class="button_bar"><a href="#">Stories</a></div>
+                        <div id="btn2" class="button_bar"><a href="#">Worksheets</a></div>
+                        <div id="btn3" class="button_bar"><a href="#">Screeners</a></div>
                     </div>
                 </div>
             </div>
@@ -47,7 +56,7 @@
     <div style="margin: auto; width: 100%; position: fixed; text-align: center; top: 50%; font-weight: bold;">
         <ion-spinner icon="bubbles"></ion-spinner>
         <div style="margin: auto; width: 100%; position: fixed; text-align: center; font-weight: bold;">
-            Loading worksheets...
+            Loading...
         </div>
     </div>
 </div>
