download zip and extract

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -13,7 +13,7 @@
                     <div class="slide_animate">
                         <div class="products_box" id="products_box_1">
                             <div class="product" data-type="" title="{{story.name}}" ng-repeat="story in stories" ng-click="playContent(story);">
-                                <img ng-src="{{story.appIcon}}" alt="" width="100" height="105" />
+                                <img data-ng-src="{{story.appIcon}}" alt="" width="100" height="105" />
                             </div>
                         </div>
                     </div>
@@ -21,7 +21,7 @@
                     <div class="slide_animate">
                         <div class="products_box" id="products_box_2">
                             <div class="product" data-type="" title="{{worksheet.name}}" ng-repeat="worksheet in worksheets" ng-click="playContent(worksheet);">
-                                <img ng-src="{{worksheet.appIcon}}" alt="" width="100" height="105" />
+                                <img data-ng-src="{{worksheet.appIcon}}" alt="" width="100" height="105" />
                             </div>
                         </div>
                     </div>
