--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -9,7 +9,6 @@
             
             <div class="panel_slider">
                 <div class="panel_items">
-
                     <div class="slide_animate">
                         <div class="products_box" id="products_box_1">
                             <div class="product" data-type="" title="{{story.name}}" ng-repeat="story in stories" ng-click="playContent(story);">
@@ -25,7 +24,6 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div><!-- panel_items -->
             </div><!-- panel_slider -->
             
@@ -48,6 +46,13 @@
         <ion-spinner icon="bubbles"></ion-spinner>
         <div style="margin: auto; width: 100%; position: fixed; text-align: center; font-weight: bold;">
             Loading...
+        </div>
+    </div>
+</div>
+<div id="errorDiv" style="margin:auto; position:absolute;width:100%;height:20%; bottom:105px; z-index: 1000; display:none;">
+    <div style="margin: auto; width: 100%; position: fixed; text-align: center; bottom:105px; font-weight: bold;">
+        <div style="margin: auto; width: 100%; position: fixed; text-align: center; font-weight: bold;">
+            Unable to connect to the content repository.<br/> Please check your internet connectivity and try again.
         </div>
     </div>
 </div>
